crates/svelte-parser/tests/snapshots/snapshots__attach_multiple.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
<div {@attach first} {@attach second} {@attach third}>Multiple</div>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 68,
                    },
                    name: "div",
                    attributes: [
                        Attach(
                            AttachAttribute {
                                span: Span {
                                    start: 5,
                                    end: 20,
                                },
                                expression_span: Span {
                                    start: 14,
                                    end: 19,
                                },
                                expression: "first",
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                        Attach(
                            AttachAttribute {
                                span: Span {
                                    start: 21,
                                    end: 37,
                                },
                                expression_span: Span {
                                    start: 30,
                                    end: 36,
                                },
                                expression: "second",
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                        Attach(
                            AttachAttribute {
                                span: Span {
                                    start: 38,
                                    end: 53,
                                },
                                expression_span: Span {
                                    start: 47,
                                    end: 52,
                                },
                                expression: "third",
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                    ],
                    children: [
                        Text(
                            Text {
                                span: Span {
                                    start: 54,
                                    end: 62,
                                },
                                data: "Multiple",
                                is_whitespace: false,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 68,
        },
    },
    span: Span {
        start: 0,
        end: 68,
    },
}
