crates/svelte-parser/tests/snapshots/snapshots__attribute_unquoted.snap
---
source: crates/svelte-parser/tests/snapshots.rs
expression: output
---
Source:
<div class=container>content</div>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 34,
                    },
                    name: "div",
                    attributes: [
                        Normal(
                            NormalAttribute {
                                span: Span {
                                    start: 5,
                                    end: 20,
                                },
                                name: "class",
                                value: Text(
                                    TextValue {
                                        span: Span {
                                            start: 11,
                                            end: 20,
                                        },
                                        value: "container",
                                    },
                                ),
                            },
                        ),
                    ],
                    children: [
                        Text(
                            Text {
                                span: Span {
                                    start: 21,
                                    end: 28,
                                },
                                data: "content",
                                is_whitespace: false,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 34,
        },
    },
    span: Span {
        start: 0,
        end: 34,
    },
}
