crates/svelte-parser/tests/snapshots/snapshots__attributes.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
<div class="container" id="main" disabled>Content</div>

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            Element(
                Element {
                    span: Span {
                        start: 0,
                        end: 55,
                    },
                    name: "div",
                    attributes: [
                        Normal(
                            NormalAttribute {
                                span: Span {
                                    start: 5,
                                    end: 22,
                                },
                                name: "class",
                                value: Text(
                                    TextValue {
                                        span: Span {
                                            start: 12,
                                            end: 21,
                                        },
                                        value: "container",
                                    },
                                ),
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                        Normal(
                            NormalAttribute {
                                span: Span {
                                    start: 23,
                                    end: 32,
                                },
                                name: "id",
                                value: Text(
                                    TextValue {
                                        span: Span {
                                            start: 27,
                                            end: 31,
                                        },
                                        value: "main",
                                    },
                                ),
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                        Normal(
                            NormalAttribute {
                                span: Span {
                                    start: 33,
                                    end: 41,
                                },
                                name: "disabled",
                                value: True,
                                leading_comments: [],
                                trailing_comments: [],
                            },
                        ),
                    ],
                    children: [
                        Text(
                            Text {
                                span: Span {
                                    start: 42,
                                    end: 49,
                                },
                                data: "Content",
                                is_whitespace: false,
                            },
                        ),
                    ],
                    self_closing: false,
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 55,
        },
    },
    span: Span {
        start: 0,
        end: 55,
    },
}
