crates/svelte-parser/tests/snapshots/snapshots__await_block.snap
---
source: crates/svelte-parser/tests/snapshots.rs
assertion_line: 9
expression: output
---
Source:
{#await promise}
    <p>Loading...</p>
{:then data}
    <p>{data}</p>
{:catch error}
    <p>Error: {error}</p>
{/await}

Errors: []

AST:
SvelteDocument {
    module_script: None,
    instance_script: None,
    style: None,
    fragment: Fragment {
        nodes: [
            AwaitBlock(
                AwaitBlock {
                    span: Span {
                        start: 0,
                        end: 119,
                    },
                    expression_span: Span {
                        start: 8,
                        end: 15,
                    },
                    expression: "promise",
                    pending: Some(
                        Fragment {
                            nodes: [
                                Element(
                                    Element {
                                        span: Span {
                                            start: 21,
                                            end: 38,
                                        },
                                        name: "p",
                                        attributes: [],
                                        children: [
                                            Text(
                                                Text {
                                                    span: Span {
                                                        start: 24,
                                                        end: 34,
                                                    },
                                                    data: "Loading...",
                                                    is_whitespace: false,
                                                },
                                            ),
                                        ],
                                        self_closing: false,
                                    },
                                ),
                            ],
                            span: Span {
                                start: 16,
                                end: 38,
                            },
                        },
                    ),
                    then: Some(
                        AwaitThen {
                            span: Span {
                                start: 39,
                                end: 70,
                            },
                            value: Some(
                                "data",
                            ),
                            value_span: Some(
                                Span {
                                    start: 46,
                                    end: 50,
                                },
                            ),
                            body: Fragment {
                                nodes: [
                                    Element(
                                        Element {
                                            span: Span {
                                                start: 56,
                                                end: 69,
                                            },
                                            name: "p",
                                            attributes: [],
                                            children: [
                                                Expression(
                                                    ExpressionTag {
                                                        span: Span {
                                                            start: 59,
                                                            end: 65,
                                                        },
                                                        expression_span: Span {
                                                            start: 60,
                                                            end: 64,
                                                        },
                                                        expression: "data",
                                                    },
                                                ),
                                            ],
                                            self_closing: false,
                                        },
                                    ),
                                ],
                                span: Span {
                                    start: 51,
                                    end: 69,
                                },
                            },
                        },
                    ),
                    catch: Some(
                        AwaitCatch {
                            span: Span {
                                start: 70,
                                end: 111,
                            },
                            error: Some(
                                "error",
                            ),
                            body: Fragment {
                                nodes: [
                                    Element(
                                        Element {
                                            span: Span {
                                                start: 89,
                                                end: 110,
                                            },
                                            name: "p",
                                            attributes: [],
                                            children: [
                                                Expression(
                                                    ExpressionTag {
                                                        span: Span {
                                                            start: 99,
                                                            end: 106,
                                                        },
                                                        expression_span: Span {
                                                            start: 100,
                                                            end: 105,
                                                        },
                                                        expression: "error",
                                                    },
                                                ),
                                            ],
                                            self_closing: false,
                                        },
                                    ),
                                ],
                                span: Span {
                                    start: 84,
                                    end: 110,
                                },
                            },
                        },
                    ),
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 119,
        },
    },
    span: Span {
        start: 0,
        end: 119,
    },
}
